--- a/furuci/css/styles.css
+++ b/furuci/css/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Global Styles */
+
 html {
     font-size: 16px;
     color: #F685EA;
@@ -75,5 +76,12 @@ dl {
     padding-right: 1;
     list-style-type: none;
     font-size:.875rem;
+
+}
+
+img {
+
+    width:100%;
+    max-width:30rem;
 
 }
