--- a/durhamj/blog/blog-pages/css/styles.css
+++ b/durhamj/blog/blog-pages/css/styles.css
@@ -26,7 +26,7 @@ body {
 
 .page-header {
   
-    background:#333 url(../../images/karl-solano-FnD1bPuFxWw-unsplash.jpg) center/cover no-repeat;
+    background:#333 url(../../../images/karl-solano-FnD1bPuFxWw-unsplash.jpg) center/cover no-repeat;
     background-blend-mode: overlay;
     color:#FFF;
     padding:1rem;
