--- a/durhamj/blog/css/styles.css
+++ b/durhamj/blog/css/styles.css
@@ -22,11 +22,20 @@ body {
     font-size: 1rem;
     line-height: 1.3;
     
+    
 }
 
 .introduction {
 
   margin:1rem;
+
+}
+
+.introduction p {
+
+  font-size:.875rem;
+  font-weight:300;
+  padding:0 1rem;
 
 }
 
@@ -84,7 +93,7 @@ h2 {
 
 .page-header {
 
-  background:#333 url(../images/karl-solano-FnD1bPuFxWw-unsplash.jpg) center/cover no-repeat;
+  background:#333 url(../../images/karl-solano-FnD1bPuFxWw-unsplash.jpg) center/cover no-repeat;
   background-blend-mode: overlay;
   color:#FFF;
   padding:1rem;
