--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -2,111 +2,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-/* Global Styles */
 html {
-    font-size: 16px;
-    color: #333;
-    font-family: Roboto, sans-serif;
-    scroll-behavior: smooth;
+ font-size:16px;
 }
 
-body {
+body { 
     background-color: #FFF;
-    margin: 1% auto;
-    width: 90%;
-    max-width: 57rem;
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 1.3;
+    font-family: Arial, Verdana, sans-serif;
+
+    margin:10% auto;
+    width:80%;
+    max-width:37.5rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+p {
+ margin:2rem 0;
+ font-weight:200;
 }
 
 main {
-
-    margin-bottom:3rem;
-
+ 
 }
 
 h1 {
+ font-size:4rem;
+ font-family: 'Oswald', cursive;
+ letter-spacing: .125rem;
+}
 
-font-family: Oswald, sans-serif;
-font-size:4rem;
+nav {
+
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:1rem;
 
 }
 
-h2 {
+nav a {
 
-    font-family: Oswald, sans-serif;
-    font-size:2rem;
-    color:#EEF;
-    text-transform: uppercase;
-    padding:1rem;
-
-}
-h3 {
-    font-size:1.5rem;
-    margin-bottom:.5rem;
-    font-weight:400;
-}
-
-ol, ul, p {
-
+    text-decoration: none;
+    display:block;
     font-size:.875rem;
-    font-weight:300;
-
-}
-
-dl {
-
-    margin:0 auto;
-    width:90%;
-
-}
-
-dt {
-
-    margin-bottom:.25rem;
-
-}
-
-dd {
-
-    font-size:.875rem;
-    font-weight:300;
-    margin-left:0;
-    margin-bottom:.75rem;
-
-
-}
-
-figure {
-
-    margin:.5rem 0;
-
-}
-
-figure > img {
-
-    width:100%;
-    max-width:30rem;
-
-}
-
-figcaption {
-
-    padding:.25rem auto;
-    font-size:.875rem;
-    font-weight:300;
-
-}
-
-.article-header {
-
-    background-color:#87B38D;
-      
-}
-
-.article-content {
-
-    padding:0 1rem;
+    padding:.5rem;
+    margin-bottom:1rem;
+    border:1px solid #333;
+    border-radius:5px;
+    align-content: center;
 
 }
