--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -10,8 +10,9 @@ body {
     background-color: #FFF;
     font-family: Arial, Verdana, sans-serif;
 
-    margin:10% auto;
-    width:80%;
+   display: flex;
+  justify-content: center;
+  align-items: center;
     max-width:37.5rem;
     font-family: 'Roboto', sans-serif;
 }
