--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -9,10 +9,8 @@ html {
 body { 
     background-color: #FFF;
     font-family: Arial, Verdana, sans-serif;
-
-   display: flex;
-  justify-content: center;
-  align-items: center;
+    margin:10% auto;
+    width:80%;
     max-width:37.5rem;
     font-family: 'Roboto', sans-serif;
 }
