--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -23,16 +23,6 @@ body {
     background-repeat:no-repeat;
 }
 
-header {
-    margin:0 auto;
-    padding:2rem 0;
-    width:90%;
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-}
-
 body { 
     background-color: #FFF;
     font-family: Arial, Verdana, sans-serif;
@@ -53,7 +43,7 @@ main {
 
 h1 {
  font-size:4rem;
- font-family: 'Oswald', ssan-serif;
+ font-family: 'Oswald', san-serif;
  letter-spacing: .125rem;
 }
 
