--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -45,7 +45,7 @@ h1 {
 nav {
 
     display:grid;
-    grid-template-columns: auto;
+    grid-template-columns: repeat(5, 1fr);
     gap:1rem;
 
 }
@@ -55,6 +55,8 @@ nav a {
     text-decoration: none;
     display:block;
     font-size:.875rem;
+    color:#333;
+    background-color:rgba(255, 255, 255, 0.5);
     padding:.5rem;
     margin-bottom:1rem;
     border:1px solid #333;
