--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -23,6 +23,7 @@ body {
     background-repeat:no-repeat;
     width:100vw;
     height:100vh;
+    max-width:37.5rem;
     font-family: 'Roboto', sans-serif;
     padding:2rem;
 }
@@ -47,6 +48,11 @@ nav {
     display:grid;
     grid-template-columns: repeat(5, 1fr);
     gap:1rem;
+    background-color:rgba(255, 255, 255, 0.5);
+    border:1px solid #333;
+    border-radius:5px;
+    margin:1rem 0;
+
 
 }
 
@@ -56,11 +62,7 @@ nav a {
     display:block;
     font-size:.875rem;
     color:#333;
-    background-color:rgba(255, 255, 255, 0.5);
     padding:.5rem;
-    margin-bottom:1rem;
-    border:1px solid #333;
-    border-radius:5px;
     align-content: center;
 
 }
