--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -10,29 +10,33 @@
 
 :root {
     font-size:16px;
-    color:#324A5F;
     font-family:Roboto;
-    --main-color:#FFF;
-    --main-bg-color:#1B2A41;
+    --primary-color:rgba(255, 255, 255, 1);
+    --secondary-color:#1B2A41;
+    background-image: url('../images/usgs-hoS3dzgpHzw-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: var(--secondary-color);
+    background-blend-mode:overlay;
+    width: 100%;
+    height: 100vh;
 }
 
 body {
-    color:var(--main-color);
-    background-color:var(--main-bg-color);
-    background-image: url(../images/usgs-hoS3dzgpHzw-unsplash.jpg);
-    background-repeat:no-repeat;
-    background-size:3000px 3000px;
-    max-width:48rem;
-    font-family: 'Roboto', sans-serif;
+    color:var(--primary-color);
     padding:2rem;
+    
 }
 
 p {
  margin:2rem 0;
- font-weight:200;
+ font-weight:400;
 }
 
 main {
+
+    max-width:48rem;
  
 }
 
@@ -51,24 +55,40 @@ nav {
 
 nav a {
 
-    text-decoration: none;
     display:block;
-    height:200px;
-    width:200px;
+    
     font-size:1rem;
     font-weight:600;
-    color:#1B2A41;
     padding:.5rem;
-    background-color:rgba(255, 255, 255, 0.5);
-    border:1px solid #333;
-    border-radius:5px;
-    margin:1rem 0;
-    align-content: center;
-    text-align: center;
+    color:var(--main-color)
+
+}
+
+nav a:hover {
+
+    opacity:.5;
+    text-decoration: none;
 
 }
 
 @media screen and (min-width:769px) {
+    
+    :root {
+
+        background-blend-mode: normal;
+        background-color: none;
+   
+    }
+
+    body {
+
+        width: 100vw;
+        height: 100vh;
+        display:flex;
+        justify-content:center;
+        align-items: center;
+        
+    }
     
     h1 {
      font-size:4rem;
@@ -76,22 +96,31 @@ nav a {
     
     nav {
         
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap:1rem;
+        display:grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap:.5rem;
+    
     
     }
+
+    p {
+
+
+    }
+
+    
 }
 
 @media screen and (min-width:968px) {
 
  nav {
         
-    display:grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap:1rem;
+    
     
     }
+nav a {
 
+
+}
     
 }
