--- a/durhamj/css/styles.css
+++ b/durhamj/css/styles.css
@@ -18,20 +18,24 @@
     background-position: center;
     background-repeat: no-repeat;
     background-color: var(--secondary-color);
+    color:var(--primary-color);
     background-blend-mode:overlay;
     width: 100%;
     height: 100vh;
 }
 
 body {
+
     color:var(--primary-color);
     padding:2rem;
+    opacity:.7;
     
 }
 
 p {
+
  margin:2rem 0;
- font-weight:400;
+
 }
 
 main {
@@ -43,20 +47,24 @@ main {
 h1 {
  font-size:3rem;
  font-family: 'Oswald', san-serif;
- letter-spacing: .125rem;
+}
+
+h2 {
+
+    font-size:1.5rem;
+    font-family: 'Oswald', san-serif;
+
 }
 
 nav {
 
     display:block;
-    
-
+   
 }
 
 nav a {
 
     display:block;
-    
     font-size:1rem;
     font-weight:600;
     padding:.5rem;
@@ -70,6 +78,14 @@ nav a:hover {
     text-decoration: none;
 
 }
+
+footer {
+
+    padding:2rem 0;
+    font-size:1rem;
+   
+}
+
 
 @media screen and (min-width:769px) {
     
@@ -87,11 +103,27 @@ nav a:hover {
         display:flex;
         justify-content:center;
         align-items: center;
+        opacity:.8;
         
     }
     
     h1 {
+
      font-size:4rem;
+
+    }
+
+    h2 {
+
+        font-size:2.5rem;
+
+    }
+
+    .blurb-text {
+
+        font-size:1.25rem;
+        font-weight:200;
+
     }
     
     nav {
@@ -100,27 +132,12 @@ nav a:hover {
         grid-template-columns: repeat(3, 1fr);
         gap:.5rem;
     
-    
     }
 
-    p {
+    footer {
 
+        font-weight:200;
 
     }
-
-    
-}
-
-@media screen and (min-width:968px) {
-
- nav {
-        
-    
-    
-    }
-nav a {
-
-
-}
-    
+   
 }
