--- a/furuci/css/styles.css
+++ b/furuci/css/styles.css
@@ -6,20 +6,25 @@
 
 html {
     font-size: 16px;
-    color: #f0ebee;
+    color: #000000;
     font-family: Roboto, sans-serif;
     scroll-behavior: smooth;
-    background-color:#fc80be ;
+    background-color:#ffffff ;
 
+
+}
+
+.page-header {
+background:...url(images/flowersss.jpg);
 
 }
 
 body {
 
-    background-color: #fc80be;
+    background-color: #ffffff;
     margin: 1% auto;
     width: 100%;
-    max-width: 30rem;
+    max-width: 35rem;
     font-weight: 300;
     font-size: .875rem;
     line-height: 1.3;
@@ -29,30 +34,34 @@ body {
     padding-right: 1;
     
 }
-
-main {
-
-    margin-bottom:3rem;
-    background-image: url("/shared-assets/images/examples/background image bows.jpg");
+page-header {
+    background: url(../../images/flowersss.jpg) center/cover no-repeat;
     padding: 1rem;
 
 }
 
+main {
+
+    margin-bottom:3rem;
+  
+
+}
+
 h1 {
-    color: #f0ebee;
+    color: #fc6c85;
     font-family: Oswald, sans-serif;
     font-size:.875rem;
 }
 
 h2 {
-    color: #f0ebee;
+    color: #fc6c85;
     font-family: Oswald, sans-serif;
     font-size:.875rem;
 
 }
 
 h3 {
-     color: #f0ebee;
+     color: #fc6c85;
     font-family: Oswald, sans-serif;
     font-size:.875rem;
 }
@@ -83,3 +92,4 @@ img {
     
 
 } 
+
