--- a/furuci/css/styles.css
+++ b/furuci/css/styles.css
@@ -15,8 +15,14 @@ html {
 }
 
 .page-header {
-background:...url(images/flowersss.jpg);
 
+  background: #FFC0CB url(../images/flowersss.jpg) center/cover no-repeat;
+  background-blend-mode: overlay;
+  background-size: 35rem
+  color:#FFF;
+  padding:1rem;
+  max width: 35rem;
+ 
 }
 
 body {
@@ -24,33 +30,27 @@ body {
     background-color: #ffffff;
     margin: 1% auto;
     width: 100%;
-    max-width: 35rem;
+    max-width: 50rem;
     font-weight: 300;
     font-size: .875rem;
     line-height: 1.3;
     padding-top: 0;
     padding-top: 0;
     padding-left: 1;
-    padding-right: 1;
-    
+    padding-right: 1;   
 }
-page-header {
-    background: url(../../images/flowersss.jpg) center/cover no-repeat;
-    padding: 1rem;
-
-}
-
 main {
 
-    margin-bottom:3rem;
-  
-
+    margin-bottom:20 px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 h1 {
     color: #fc6c85;
     font-family: Oswald, sans-serif;
-    font-size:.875rem;
+    font-size:2rem;
+    text-align: center;
 }
 
 h2 {
@@ -89,7 +89,9 @@ dl {
 img {
     width: 100%;
     max-width: 30rem;
-    
+    image-orientation: center;
 
 } 
+
+
 
