--- a/furuci/css/styles.css
+++ b/furuci/css/styles.css
@@ -22,8 +22,11 @@ html {
   color:#FFF;
   padding:1rem;
   max width: 35rem;
+
  
+
 }
+
 
 body {
 
@@ -35,7 +38,6 @@ body {
     font-size: .875rem;
     line-height: 1.3;
     padding-top: 0;
-    padding-top: 0;
     padding-left: 1;
     padding-right: 1;   
 }
@@ -43,25 +45,38 @@ main {
 
     margin-bottom:20 px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 20px; 
+
+
 }
 
+#main-nav a> {
+     text-decoration: none;
+    color:#D9027D;
+    font-size:2.5vw;
+    font-weight:400;
+    padding:.75rem;
+
+
+
+} 
+
 h1 {
-    color: #fc6c85;
+    color: #D9027D;
     font-family: Oswald, sans-serif;
     font-size:2rem;
     text-align: center;
 }
 
 h2 {
-    color: #fc6c85;
+    color: #D9027D;
     font-family: Oswald, sans-serif;
     font-size:.875rem;
 
 }
 
 h3 {
-     color: #fc6c85;
+     color: #D9027D;
     font-family: Oswald, sans-serif;
     font-size:.875rem;
 }
@@ -87,7 +102,7 @@ dl {
 
 } 
 img {
-    width: 100%;
+    width: 35%;
     max-width: 30rem;
     image-orientation: center;
 
